organised files. updated css and file sizes to improve site performance. Added aditional class styling and html content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navbar">
-        <h3>Cyber-Doc</h3>
+        <h3>Cyber-Doc&trade;</h3>
         <ul class="navlinks">
             <li><a>Consultation</a></li>
             <li><a>About us</a></li>
@@ -20,55 +20,69 @@
         <div class="content">
             <div class="info"> 
                 <h1>Welcome to Cyber-Doc&trade;</h1>
-                <p>New York's leading cyber-mod clinic with the widest range of state-of-the-art cyber-mods to satisfy any need. No matter if you are looking for a fresh alloy anodizing or that much needed optical implant. We have something for you! <strong>ALL</strong> installations<sup>1</sup>are safe<sup>2</sup> and free with any new cyber-mod purchase.</p>
+                <p>Pit City's leading cyber-mod clinic with the widest range of state-of-the-art cyber-mods to satisfy any need. No matter if you are looking for a fresh alloy anodizing or that much needed optical implant. We have something for you! <strong>ALL</strong> installations are free<sup>1</sup> and safe<sup>2</sup> with any new cyber-mod purchase.</p>
                 <button>sign up</button>
             </div>
             <div class="img-box">
-                <img src="placeholder-wide.jpg">
+                <img src="./img/placeholder-wide.jpg">
             </div>
         </div>
     </div>
     <div class="mid-box">
         <div class="title">
-            <h2>Featured Cyber-Mods</h2>
+            <h2>Our Most Popular Cyber-Mods</h2>
         </div>
         <div class="row">
             <div class="row-box">
-                <img src="placeholder-wide.jpg">
+                <img src="./img/placeholder-wide.jpg">
+                <p><strong><i>Vis-Tech&trade; Oculars</i></strong></p>
+                <p>Featuring Night-Sight&trade; V.6</p>
+            </div>
+            <div class="row-box">
+                <img src="./img/placeholder-wide.jpg">
+                <p><strong><i>APENDAGE&trade; Cyber-arm*</i></strong></p>
+                <p>*Holo-blade optional</p>    
+            </div>
+            <div class="row-box">
+                <img src="./img/placeholder-wide.jpg">
                 <p>some other subtext that i can fill for explaining what this picture is gonna be.</p>
             </div>
             <div class="row-box">
-                <img src="placeholder-wide.jpg">
-                <p>some other subtext that i can fill for explaining what this picture is gonna be.</p>
-            </div>
-            <div class="row-box">
-                <img src="placeholder-wide.jpg">
-                <p>some other subtext that i can fill for explaining what this picture is gonna be.</p>
-            </div>
-            <div class="row-box">
-                <img src="placeholder-wide.jpg">
+                <img src="./img/placeholder-wide.jpg">
                 <p>some other subtext that i can fill for explaining what this picture is gonna be.</p>
             </div>
         </div>
     </div>
-    <div class="quote-box">
-        <div class="quote">
-            <div>
-                <i>"wow this website is very cool i just wanted to say that because someone needs to say and misspell something."</i>
-                <p><sub><strong>- Super rich billionaire guy</strong></sub></p>
+    <div class="award-box">
+        <div class="content">
+            <div class="row">
+                <div class="row-box">
+                    <img src="./img/placeholder-wide.jpg">
+                    <p><strong>CMC Gold Service Award 2046</strong></p>
+                </div>
+                <div class="row-box">
+                    <img src="./img/placeholder-wide.jpg">
+                    <p><strong>CMC Platinum Service Award 2047</strong></p>
+                </div>
+                <div class="row-box">
+                    <img src="./img/placeholder-wide.jpg">
+                    <p><strong>CMC Silver Service Award 2048</strong></p>
+                </div>
             </div>
             <div>
-                <p>If you would like more information on what Cyber-Doc&trade; could do for <strong>you</strong>, sign-up now for our </p>
+                <p>Contact <strong>NOW</strong> for a free consultation<sup>4</sup></p>
                 <button>sign up</button>
             </div>
         </div>
     </div>
     <div class="footer">
-        <footer>&reg;2048 Copyright Cyber-Doc&trade;</footer>
+        <footer>Copyright © Cyber-Doc&trade; 2048</footer>
         <p><sup>1</sup><small><i>We do not offer installations for after-market cyber-mods. All Cyber-Mods must be purchased from Cyber-Doc&trade; directly.</i></small></p>
         <p><sup>2</sup><small><i>We are not responsible for any injury, malfunction or death that may occur as a result of the implant process. All removed body parts become the exclusive property of Cyber-doc&trade; All purchases final.</i></small></p>
         <p><sup>3</sup><small><i>Positive testimonials are contractually obligated by all surviving customers after installation.</i></small></p>
-        <p><small><i>This site is entirely satirical. I or anyone deemed to be</i></small></p>
+        <p><sup>4</sup><small><i>Any information or medical samples collected during consultation are the exclusive property of Cyber-Doc&trade;</i></small></p>
+        <hr>
+        <p><small><i>This site and all content was created to be entirely satirical. Created by <a>Jimkwy</a></i></small></p>
     </div>
 </body>
 </html>
