updated image files and background with custom images

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
             <div class="info"> 
                 <h1>Welcome to Cyber-Doc&trade;</h1>
                 <p>Pit City's leading cyber-mod clinic with the widest range of state-of-the-art cyber-mods to satisfy any need. No matter if you are looking for a fresh alloy anodizing or that much needed optical implant. We have something for you! <strong>ALL</strong> installations are free<sup>1</sup> and safe<sup>2</sup> with any new cyber-mod purchase.</p>
-                <button>sign up</button>
             </div>
             <div class="img-box">
-                <img src="./img/placeholder-wide.jpg">
+                <img src="./img/office.jpg">
             </div>
         </div>
     </div>
@@ -34,44 +33,35 @@
         </div>
         <div class="row">
             <div class="row-box">
-                <img src="./img/placeholder-wide.jpg">
-                <p><strong><i>Vis-Tech&trade; Oculars</i></strong></p>
+                <img src="./img/oculars.jpg">
+                <p><strong><i>Vis-Tech&trade;</i> Oculars</strong></p>
                 <p>Featuring Night-Sight&trade; V.6</p>
             </div>
             <div class="row-box">
-                <img src="./img/placeholder-wide.jpg">
-                <p><strong><i>APENDAGE&trade; Cyber-arm*</i></strong></p>
+                <img src="./img/cyber-arm.jpg">
+                <p><strong><i>APPENDAGE&trade;</i> Cyber-Arm<sup>*</sup></strong></p>
                 <p>*Holo-blade optional</p>    
             </div>
             <div class="row-box">
-                <img src="./img/placeholder-wide.jpg">
-                <p>some other subtext that i can fill for explaining what this picture is gonna be.</p>
+                <img src="./img/2nd-stomach.jpg">
+                <p><strong><i>i-GUT&trade;</i> 2ND-Stomach&trade;</strong></p>
+                <p>Muckbanger's Choice Winner</p>
             </div>
             <div class="row-box">
-                <img src="./img/placeholder-wide.jpg">
-                <p>some other subtext that i can fill for explaining what this picture is gonna be.</p>
+                <img src="./img/cybertail.jpg">
+                <p><strong><i>Furr-E&trade;</i> Tec-Tail&trade;</strong></p>
+                <p>Wag, whip and walk with style!&trade; Now with new omn-directional bio-motors!</p>
             </div>
         </div>
     </div>
     <div class="award-box">
         <div class="content">
-            <div class="row">
-                <div class="row-box">
-                    <img src="./img/placeholder-wide.jpg">
-                    <p><strong>CMC Gold Service Award 2046</strong></p>
-                </div>
-                <div class="row-box">
-                    <img src="./img/placeholder-wide.jpg">
-                    <p><strong>CMC Platinum Service Award 2047</strong></p>
-                </div>
-                <div class="row-box">
-                    <img src="./img/placeholder-wide.jpg">
-                    <p><strong>CMC Silver Service Award 2048</strong></p>
-                </div>
+            <div class="info"> 
+                <h1>Meet the Cyber-Doc&trade;</h1>
+                <p>Doctor Syibar, better known as Pit-Cities own Cyber-Doc, is an industry leading professional, providing the safest and most precise service <sup><small>6</small></sup></p>
             </div>
-            <div>
-                <p>Contact <strong>NOW</strong> for a free consultation<sup>4</sup></p>
-                <button>sign up</button>
+            <div class="img-box">
+                <img src="./img/Cyber-Doc.jpg" alt="Portrait of the cyber doc">
             </div>
         </div>
     </div>
@@ -80,7 +70,8 @@
         <p><sup>1</sup><small><i>We do not offer installations for after-market cyber-mods. All Cyber-Mods must be purchased from Cyber-Doc&trade; directly.</i></small></p>
         <p><sup>2</sup><small><i>We are not responsible for any injury, malfunction or death that may occur as a result of the implant process. All removed body parts become the exclusive property of Cyber-doc&trade; All purchases final.</i></small></p>
         <p><sup>3</sup><small><i>Positive testimonials are contractually obligated by all surviving customers after installation.</i></small></p>
-        <p><sup>4</sup><small><i>Any information or medical samples collected during consultation are the exclusive property of Cyber-Doc&trade;</i></small></p>
+        <p><sup>4</sup><small><i>Cyber-Doc&trade; is in no way associated with the CMC (Cyber-Mod Consortium). All awards were received with legally bribed</i></small></p>
+        <p><sup>5</sup><small><i>Any information or medical samples collected during consultation are the exclusive property of Cyber-Doc&trade;</i></small></p>
         <hr>
         <p><small><i>This site and all content was created to be entirely satirical. Created by <a>Jimkwy</a></i></small></p>
     </div>
